--- a/app/src/main/res/layout/activity_sale_load.xml
+++ b/app/src/main/res/layout/activity_sale_load.xml
@@ -30,11 +30,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:text="客户名称："
+            android:text="发货单号："
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/customer_load_name"
+            android:id="@+id/load_outOrder_No"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -52,60 +52,17 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:text="客户地址："
+            android:text="车牌号："
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/customer_load_address"
+            android:id="@+id/load_car_plate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="2.5"
             android:textSize="18sp" />
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="商品名称："
-            android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/customer_load_good_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:textSize="18sp" />
-
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="商品规格："
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/customer_load_specification_modle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:textSize="18sp" />
-    </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -120,11 +77,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="应装数量："
+            android:text="应装重量："
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/customer_load_act_count"
+            android:id="@+id/load_weight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -140,9 +97,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:textSize="18sp"
-                android:text="实装数量:"/>
+                android:text="实装重量:"/>
             <TextView
-                android:id="@+id/customer_load_act_act_count"
+                android:id="@+id/load_act_weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -156,8 +113,7 @@
     <FrameLayout
         android:id="@+id/customer_load_change_fragment"
         android:layout_width="match_parent"
-        android:layout_height="262dp"
-        />
+        android:layout_height="330dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
