--- a/app/src/main/res/layout/activity_delivery_bill_no_detail.xml
+++ b/app/src/main/res/layout/activity_delivery_bill_no_detail.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:theme="@style/Theme.ToolBar.MyToolbar">
     </android.support.v7.widget.Toolbar>
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
             android:id="@+id/delivery_bill_nodetail_billNo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="2.5"
             android:textSize="16sp"
             android:layout_gravity="center_vertical"/>
         </LinearLayout>
@@ -55,6 +55,27 @@
             android:textSize="16sp"
             android:layout_gravity="center_vertical"/>
         </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:text="实装重量:"
+            android:textSize="16sp"/>
+        <TextView
+            android:id="@+id/delivery_bill_nodetail_act_weight"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="2.5"
+            android:textSize="16sp"/>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/imageView5"
