退货扫码显示，显示重量

--- a/app/src/main/res/layout/activity_un_load.xml
+++ b/app/src/main/res/layout/activity_un_load.xml
@@ -91,7 +91,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="应装重量："
+                    android:text="应卸重量："
                     android:textSize="18sp" />
 
                 <TextView
@@ -112,7 +112,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="实装重量:"
+                    android:text="实卸重量:"
                     android:textSize="18sp" />
 
                 <TextView
@@ -123,6 +123,68 @@
                     android:textSize="18sp" />
             </LinearLayout>
         </LinearLayout>
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/divider" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@drawable/recycler_item_bg1"
+            android:gravity="center"
+            android:text="条码"
+            android:textSize="14sp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@drawable/recycler_item_bg2"
+            android:gravity="center"
+            android:text="货品名"
+            android:textSize="14sp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@drawable/recycler_item_bg1"
+            android:gravity="center"
+            android:text="规格"
+            android:textSize="14sp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@drawable/recycler_item_bg2"
+            android:gravity="center"
+            android:text="重量"
+            android:textSize="14sp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1.5"
+            android:background="@drawable/recycler_item_bg1"
+            android:gravity="center"
+            android:text="客户名称"
+            android:textSize="14sp" />
+
     </LinearLayout>
 
     <ImageView
