--- a/app/src/main/res/layout/activity_delivery_bill.xml
+++ b/app/src/main/res/layout/activity_delivery_bill.xml
@@ -191,18 +191,24 @@
         app:srcCompat="@drawable/divider" />
 
 
+    <LinearLayout
+        android:id="@+id/delivery_bill_result_show"
+        android:layout_width="match_parent"
+        android:layout_height="250dp">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-    android:id="@+id/out_order_swipe_refresh"
-    android:layout_width="match_parent"
-    android:layout_height="250dp"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    >
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/out_order_detial"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/out_order_swipe_refresh"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+            android:layout_height="250dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/out_order_detial"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
