--- a/app/src/main/res/layout/activity_delivery_bill_no_detail.xml
+++ b/app/src/main/res/layout/activity_delivery_bill_no_detail.xml
@@ -1,80 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/delivery_bill_nodetail_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/Theme.ToolBar.MyToolbar">
-    </android.support.v7.widget.Toolbar>
+        android:theme="@style/Theme.ToolBar.MyToolbar"></android.support.v7.widget.Toolbar>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="16sp"
-            android:text="发货单号："
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="5dp"/>
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:text="发货单号："
+            android:textSize="16sp" />
+
         <TextView
             android:id="@+id/delivery_bill_nodetail_billNo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2.5"
-            android:textSize="16sp"
-            android:layout_gravity="center_vertical"/>
-        </LinearLayout>
-    <LinearLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp">
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:textSize="16sp"
             android:layout_gravity="center_vertical"
-            android:text="车牌号："
+            android:layout_weight="2.5"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="5dp"
-            />
+            android:layout_weight="1"
+            android:text="车牌号："
+            android:textSize="16sp" />
+
         <TextView
             android:id="@+id/delivery_bill_nodetail_plateNo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_weight="2.5"
-            android:textSize="16sp"
-            android:layout_gravity="center_vertical"/>
-        </LinearLayout>
+            android:textSize="16sp" />
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp">
+        android:orientation="horizontal">
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:text="实装重量:"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
+
         <TextView
             android:id="@+id/delivery_bill_nodetail_act_weight"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="2.5"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
     </LinearLayout>
 
     <ImageView
@@ -83,10 +90,16 @@
         android:layout_height="1dp"
         app:srcCompat="@drawable/divider" />
 
-    <FrameLayout
-        android:id="@+id/delivery_bill_nodetail_frag_change"
+    <LinearLayout
+        android:id="@+id/delivery_bill_nodetail_result_show"
         android:layout_width="match_parent"
-        android:layout_height="320dp" />
+        android:layout_height="320dp">
+
+        <FrameLayout
+            android:id="@+id/delivery_bill_nodetail_frag_change"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
