--- a/app/src/main/res/layout/activity_in_order_bill.xml
+++ b/app/src/main/res/layout/activity_in_order_bill.xml
@@ -33,10 +33,10 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:text="退货单号："
-                android:textSize="16sp"
-                android:layout_gravity="center_vertical"/>
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/inorder_bill_no"
@@ -129,31 +129,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/divider" />
+
     <LinearLayout
         android:id="@+id/inorder_name_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:divider="@drawable/divider"
+        android:orientation="horizontal"
         android:showDividers="end">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="#F4F4F4"
             android:gravity="center"
-            android:text="产品名"
-            android:background="#F4F4F4"/>
+            android:text="产品名" />
+
         <TextView
-            android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:gravity="center"
-            android:text="规格"
+            android:layout_weight="1"
             android:background="#F0FFF0"
-            />
+            android:gravity="center"
+            android:text="规格" />
 
         <TextView
             android:id="@+id/textView3"
@@ -161,28 +162,27 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="0.5"
+            android:background="#F4F4F4"
             android:gravity="center"
-            android:text="应卸"
-            android:background="#F4F4F4"/>
+            android:text="应卸" />
 
         <TextView
-            android:layout_height="wrap_content"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_weight="0.5"
-            android:layout_gravity="center_vertical"
-            android:gravity="center"
-            android:text="实卸"
             android:background="#F0FFF0"
-            />
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="1.5"
-            android:layout_gravity="center_vertical"
             android:gravity="center"
-            android:text="客户名"
+            android:text="实卸" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1.5"
             android:background="#F4F4F4"
-            />
+            android:gravity="center"
+            android:text="客户名" />
     </LinearLayout>
 
     <ImageView
@@ -190,18 +190,24 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/divider" />
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/inorder_swipe_refresh"
+    <LinearLayout
+        android:id="@+id/in_order_bill_result_show"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="250dp">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/inorder_detial"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/inorder_swipe_refresh"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/inorder_detial"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </android.support.v4.widget.SwipeRefreshLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
