--- a/app/src/main/res/layout/activity_un_load.xml
+++ b/app/src/main/res/layout/activity_un_load.xml
@@ -192,10 +192,16 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/divider" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/un_load_result_view"
+    <LinearLayout
+        android:id="@+id/un_load_result_show"
         android:layout_width="match_parent"
-        android:layout_height="250dp" />
+        android:layout_height="250dp">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/un_load_result_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
