无发货单明细的装车修改

--- a/app/src/main/res/layout/activity_delivery_bill.xml
+++ b/app/src/main/res/layout/activity_delivery_bill.xml
@@ -130,6 +130,7 @@
 
 
     <LinearLayout
+        android:id="@+id/delivery_bill_title_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
