--- a/app/src/main/res/layout/activity_delivery_bill.xml
+++ b/app/src/main/res/layout/activity_delivery_bill.xml
@@ -200,13 +200,13 @@
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/out_order_swipe_refresh"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/out_order_detial"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="250dp" />
         </android.support.v4.widget.SwipeRefreshLayout>
 
     </LinearLayout>
