--- a/app/src/main/res/layout/activity_no_detail_un_load.xml
+++ b/app/src/main/res/layout/activity_no_detail_un_load.xml
@@ -5,29 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <android.support.v7.widget.Toolbar
-        android:id="@+id/translate_toolbar"
+        android:id="@+id/no_detail_unload_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/Theme.ToolBar.MyToolbar" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:text="请扫描需要移库的产成品条形码："
-        android:textSize="18sp" />
-
-    <ImageView
-        android:layout_marginTop="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/divider" />
-
+        android:theme="@style/Theme.ToolBar.MyToolbar"></android.support.v7.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,7 +19,83 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView7"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:text="发货单号："
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/no_detail_unload_billNo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="2.5"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:text="车牌号："
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/no_detail_unload_plateNo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="2.5"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:text="此次实卸重量:"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/no_detail_unload_act_weight"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="2"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <ImageView
+
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:srcCompat="@drawable/divider" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
@@ -79,26 +139,25 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:background="@drawable/recycler_item_bg1"
             android:gravity="center"
-            android:text="批次号"
+            android:text="客户名称"
             android:textSize="14sp" />
+
     </LinearLayout>
 
     <ImageView
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="1dp"
         app:srcCompat="@drawable/divider" />
 
 
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/translate_result_view"
-            android:layout_width="match_parent"
-            android:layout_height="220dp"
-            />
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/no_detail_unload_recycle_view"
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -106,18 +165,17 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/translate_confirm"
-            android:layout_width="0dp"
+            android:id="@+id/no_detail_unload_confirm"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="确定" />
+            android:text="确认" />
 
         <Button
-            android:id="@+id/translate_cancel"
-            android:layout_width="0dp"
+            android:id="@+id/no_detail_unload_cancel"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="取消" />
     </LinearLayout>
-
 </LinearLayout>
