--- a/app/src/main/res/layout/user_content_frg.xml
+++ b/app/src/main/res/layout/user_content_frg.xml
@@ -84,6 +84,27 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="45dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:text="工作场区："
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/user_content_area_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="2"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="45dp"
         android:orientation="horizontal">
 
@@ -94,6 +115,7 @@
             android:layout_weight="1"
             android:text="工作天车："
             android:textSize="20sp" />
+
         <Spinner
             android:id="@+id/user_travller_spinner"
             android:layout_width="wrap_content"
@@ -135,8 +157,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:orientation="horizontal"
-        android:layout_weight="0.04">
+        android:layout_weight="0.04"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
@@ -155,14 +177,10 @@
             android:textSize="18sp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_weight="0.32"></LinearLayout>
     <Button
         android:id="@+id/change_device_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="更改设备名称"/>
+        android:text="更改设备名称" />
 
 </LinearLayout>
