--- a/app/src/main/res/layout/activity_sale_load.xml
+++ b/app/src/main/res/layout/activity_sale_load.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/Theme.ToolBar.MyToolbar"></android.support.v7.widget.Toolbar>
+        android:theme="@style/Theme.ToolBar.MyToolbar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
