--- a/app/src/main/res/layout/activity_delivery_bill.xml
+++ b/app/src/main/res/layout/activity_delivery_bill.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/delivery_bill_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-    </android.support.v7.widget.Toolbar>
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"></android.support.v7.widget.Toolbar>
 
 
     <LinearLayout
@@ -27,8 +27,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingTop="10dp">
+            android:paddingRight="5dp">
 
             <TextView
                 android:id="@+id/textView10"
@@ -56,8 +55,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingTop="5dp">
+            android:paddingRight="5dp">
 
             <TextView
                 android:layout_width="0dp"
@@ -84,12 +82,11 @@
                 android:textColorHint="#BFBFBF"
                 android:textSize="16sp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp">
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="0dp"
@@ -128,11 +125,10 @@
     </LinearLayout>
 
 
-
     <FrameLayout
         android:id="@+id/delivery_bill_title_name_frg"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -141,28 +137,23 @@
         app:srcCompat="@drawable/divider" />
 
 
-    <LinearLayout
-        android:id="@+id/delivery_bill_result_show"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/out_order_swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="250dp">
+        android:layout_height="175dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/out_order_swipe_refresh"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/out_order_detial"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:layout_height="175dp" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/out_order_detial"
-                android:layout_width="match_parent"
-                android:layout_height="250dp" />
-        </android.support.v4.widget.SwipeRefreshLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:orientation="horizontal">
 
