--- a/app/src/main/res/layout/activity_no_detail_un_load.xml
+++ b/app/src/main/res/layout/activity_no_detail_un_load.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/no_detail_unload_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/Theme.ToolBar.MyToolbar"></android.support.v7.widget.Toolbar>
@@ -157,7 +157,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/no_detail_unload_recycle_view"
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        android:layout_height="220dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
