--- a/app/src/main/res/layout/activity_delivery_bill.xml
+++ b/app/src/main/res/layout/activity_delivery_bill.xml
@@ -4,16 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/delivery_bill_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"></android.support.v7.widget.Toolbar>
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -89,19 +79,20 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/textView11"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:text="应装重量："
-                android:textSize="16sp" />
+                android:text="应装件数："
+                android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/delivery_bill_weight"
+                android:id="@+id/delivery_bill_count"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+                android:layout_weight="0.8"
                 android:textSize="14sp" />
 
             <TextView
@@ -110,15 +101,32 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
+                android:text="实装件数："
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/delivery_bill_act_cout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.7"
+                android:textSize="14sp" />
+
+            <TextView
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
                 android:text="实装重量："
-                android:textSize="16sp" />
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/delivery_bill_act_weight"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="1"
+                android:layout_weight="0.8"
                 android:textSize="14sp" />
         </LinearLayout>
 
@@ -140,16 +148,14 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/out_order_swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="175dp"
+        android:layout_height="220dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/out_order_detial"
             android:layout_width="match_parent"
-            android:layout_height="175dp" />
-
+            android:layout_height="220dp" />
     </android.support.v4.widget.SwipeRefreshLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
