--- a/app/src/main/res/layout/load_goods_content_item.xml
+++ b/app/src/main/res/layout/load_goods_content_item.xml
@@ -2,49 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:clickable="true"
-    android:focusable="true"
     android:orientation="horizontal">
 
-
     <TextView
+        android:id="@+id/load_content_item_barcode"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1.5"
         android:background="@drawable/recycler_item_bg1"
         android:gravity="center"
-        android:text="货品条码"
         android:textSize="14sp" />
 
     <TextView
+        android:id="@+id/load_content_item_good_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
         android:background="@drawable/recycler_item_bg2"
         android:gravity="center"
-        android:text="产品名称"
         android:textSize="14sp" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/load_content_item_modle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
         android:background="@drawable/recycler_item_bg1"
         android:gravity="center"
-        android:text="规格"
         android:textSize="14sp" />
 
     <TextView
+        android:id="@+id/load_content_item_customer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
         android:background="@drawable/recycler_item_bg2"
         android:gravity="center"
-        android:text="重量（kg）"
+
         android:textSize="14sp" />
+
 </LinearLayout>
