--- a/app/src/main/res/layout/activity_sale_load.xml
+++ b/app/src/main/res/layout/activity_sale_load.xml
@@ -72,7 +72,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="0.75"
                 android:orientation="horizontal">
 
                 <TextView
@@ -93,7 +93,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="0.75"
                 android:orientation="horizontal">
 
                 <TextView
@@ -121,7 +121,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="实装重量:"
+                    android:text="实装重量(kg):"
                     android:textSize="14sp" />
 
                 <TextView
