--- a/app/src/main/res/layout/activity_un_load.xml
+++ b/app/src/main/res/layout/activity_un_load.xml
@@ -9,7 +9,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/un_load_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/Theme.ToolBar.MyToolbar" />
@@ -25,10 +25,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingTop="10dp">
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="0dp"
@@ -51,10 +48,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingTop="10dp">
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="0dp"
@@ -76,52 +70,56 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingTop="10dp">
+            android:orientation="horizontal">
 
-            <LinearLayout
+            <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:text="应卸件数："
+                android:textSize="12sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="应卸重量："
-                    android:textSize="15sp" />
-
-                <TextView
-                    android:id="@+id/un_load_weight"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="14sp" />
-            </LinearLayout>
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/un_load_count"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.75"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:text="实卸件数："
+                android:textSize="12sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="实卸重量:"
-                    android:textSize="15sp" />
+            <TextView
+                android:id="@+id/un_load_act_count"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.75"
+                android:textSize="14sp" />
 
-                <TextView
-                    android:id="@+id/un_load_act_weight"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="14sp" />
-            </LinearLayout>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:text="实卸重量："
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/un_load_act_weight"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.8"
+                android:textSize="14sp" />
+
         </LinearLayout>
     </LinearLayout>
 
@@ -192,16 +190,12 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/divider" />
 
-    <LinearLayout
-        android:id="@+id/un_load_result_show"
-        android:layout_width="match_parent"
-        android:layout_height="250dp">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/un_load_result_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/un_load_result_view"
+        android:layout_width="match_parent"
+        android:layout_height="235dp" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
