--- a/app/src/main/res/layout/activity_sale_load.xml
+++ b/app/src/main/res/layout/activity_sale_load.xml
@@ -121,7 +121,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="实装重量(kg):"
+                    android:text="实装重量(t):"
                     android:textSize="14sp" />
 
                 <TextView
