--- a/app/src/main/res/layout/activity_translate.xml
+++ b/app/src/main/res/layout/activity_translate.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/translate_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -11,7 +12,31 @@
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:text="请扫描需要移库的产成品条形码："
-        android:textSize="18sp" />
+
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="扫码件数："
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/translate_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textColor="#FF0000"
+            android:textSize="18sp" />
+    </LinearLayout>
+
 
     <ImageView
         android:layout_width="match_parent"
@@ -63,7 +88,7 @@
             android:layout_weight="1"
             android:background="@drawable/recycler_item_bg2"
             android:gravity="center"
-            android:text="重量"
+            android:text="重量(t)"
             android:textSize="14sp" />
 
         <TextView
@@ -86,7 +111,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/translate_result_view"
         android:layout_width="match_parent"
-        android:layout_height="290dp" />
+        android:layout_height="270dp" />
 
 
     <LinearLayout
