--- a/app/src/main/res/layout/scan_result_item.xml
+++ b/app/src/main/res/layout/scan_result_item.xml
@@ -27,7 +27,7 @@
     <TextView
         android:id="@+id/scan_result_modle"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
         android:background="#EEEEE0"
